# tred

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  cint.cc  cint.h  design.cc  doxygen  fragment.glsl  inputsystem-overview.gv  light_fragment.glsl  main.cc  profiler.cc  profiler.h  readme.md  shader_fragment.glsl  shader_vertex.glsl  todo.md  tred.hero.json  vertex.glsl
.github/workflows/: windows.yml
cmake/: compress.cmake
data/: light_vertex.glsl  shader_fragment.glsl  shader_light.glsl  shader_material.glsl
data/sprites/: CMakeLists.txt  cards.h  onebit.h  readme.md
data/sprites/cards/: CMakeLists.txt
data/sprites/cards/sprites/: cards.cc  cards.h
data/sprites/onebit/: CMakeLists.txt
data/sprites/onebit/sprites/: onebit.cc  onebit.h  onebit_font.cc  onebit_font.h
data/sprites/space/: space.h
data/sprites/ui/: ui.h
examples/: 4thdimension.cc  CMakeLists.txt  assets.cc  assets.h  demo.cc  main.cc  minesweeper.cc
include/tred/: handle.h  result.h  stdutils.h
include/tred/input/: config.h  key.h  system.h  unitdiscovery.h
include/tred/render/: engine.h  material.shader.source.h  mesh.h  render2.h  shader.source.h  vertex_layout.h  vfs.h
src/: CMakeLists.txt
src/tred/: array.cc  array.h  assert.cc  assert.h  cint.cc  cint.h  colors.cc  compiler_warning.h  debug_opengl.cc  dependency_glad.h  dependency_glm.cc  dependency_glm.h  dependency_imgui.h  dependency_opengl.cc  dependency_opengl.h  dependency_sdl.cc  dependency_sdl.h  embedded_types.cc  embedded_types.h  fyro.h  game.cc  game.h  geom.cc  geom.compiled.cc  geom.compiled.h  geom.default.cc  geom.default.h  geom.h  handle.cc  handle.h  handle.test.cc  hash.cc  hash.h  hash.string.cc  hash.string.h  image.cc  image.h  image.types.cc  input-action.cc  input-action.h  (+145 more)
src/tred/input/: action.cc  action.h  actionmap.cc  actionmap.h  activeunit.cc  activeunit.gamecontroller.cc  activeunit.gamecontroller.h  activeunit.h  activeunit.joystick.cc  activeunit.joystick.h  activeunit.keyboard.cc  activeunit.keyboard.h  activeunit.mouse.cc  activeunit.mouse.h  axis.cc  axis.h  axistype.cc  axistype.h  bind.cc  bind.h  bindunit.cc  bindunit.h  config.cc  config.h  connectedunits.cc  connectedunits.h  convert-sdl.cc  director.cc  director.h  hataxis.cc  hataxis.h  index.cc  index.h  joystickactiveunit.cc  joystickactiveunit.h  joystickdef.cc  joystickdef.h  key.cc  key.h  keyboardactiveunit.cc  (+54 more)
src/tred/render/: cache.cc  cache.h  camera.cc  camera.compiled.cc  camera.compiled.h  camera.h  compiled.geom.cc  compiled.geom.h  compiled.mesh.cc  compiled.mesh.h  compiledmaterial.cc  compiledmaterial.h  compiledmaterialshader.cc  compiledmaterialshader.h  engine.cc  engine.data.h  engine.h  geom.cc  geom.default.cc  geom.default.h  geom.h  handle.compiledmaterialshader.cc  handle.compiledmaterialshader.h  handle.funcs.h  handle.mesh.cc  handle.mesh.h  handle.texture.h  handle.world.cc  handle.world.h  handles.h  layer2.cc  layer2.h  light.active.cc  light.active.h  light.cc  light.h  light.params.cc  light.params.h  light.uniforms.cc  light.uniforms.h  (+51 more)
src/tred/render/empty/: handle.mesh.cc  handle.texture.cc  handles.cc  light.cc  mesh.cc  readme.md  render_world_interface.cc  vfs.cc
tools/: CMakeLists.txt  compress.cmake  embed.cmake  embed_binary.cpp  windows.py
